base/generic-site-www/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
    service: frontend
spec:
  ports:
  - name: http
    port: ${incoming_port:=80}
    targetPort: ${target_port:=80}
  selector:
    app: frontend
